[package]
name = "boringtun"
description = "an implementation of the WireGuard® protocol designed for portability and speed"
version = "0.3.0"
authors = ["Vlad Krasnov <vlad@cloudflare.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/cloudflare/boringtun"
edition = "2018"

[dependencies]
base64 = "0.12"
hex = "0.4"
untrusted = "0.7"
spin = { version = "0.5", default-features=false }
libc = "0.2"
log = "0.4"

[target.'cfg(not(target_arch="arm"))'.dependencies]
ring = "0.16"

[target.'cfg(not(any(target_os="windows", target_os="ios", target_os="android")))'.dependencies]
chrono = "0.4"
daemonize = "0.4"
clap = { version = "2.33", default-features=false, features = ["suggestions"] }

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.17", default-features = false }
android_logger = "0.9"

[lib]
crate-type = ["lib", "staticlib", "dylib"]

[[bin]]
name = "boringtun"
path = "src/main.rs"

[[example]]
name = "benchmarks"
path = "src/benchmarks_example.rs"
